--- a/index.html
+++ b/index.html
@@ -59,11 +59,14 @@
          start = getNow(),
          lasttick,
          elapsed,
+         cells = {},
          cellsA = '____##____#________#_____#________#_____#_______________#______#___###___________#________###___#___#____##___________##____#___#___###________#___________###___#______#_______________#_____#________#_____#________#____##____'.split(""),
 
          cellsB = '___###___###_______#_____#________#_____#___________#_______###___###___###_______#___________#_____#_______###___###_______#_____#___________#_______###___###___###_______#___________#_____#________#_____#_______###___###___'.split(""),
 
-         cellsC = '___#_________________#_____#_________________#___'.split("");
+         cellsC = '___#_________________##___##_________________#___'.split(""),
+         cellsD = "____#_________#_________#_________#___________########___________#_________#_________#_________#____".split(""),
+         cellsE="#___#____#____#____#____#_________#____#________#___#___#________####___######___#___#________#____##_______##_____##_______##____#________#___#___######___####________#___#___#________#____#_________#____#____#____#____#___#".split("")
 
      
      worker.addEventListener("message", function(message) {
