fix up sort bug

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
          cellsB = '___###___###_______#_____#________#_____#___________#_______###___###___###_______#___________#_____#_______###___###_______#_____#___________#_______###___###___###_______#___________#_____#________#_____#_______###___###___'.split(""),
 
-         cellsC = '___#_________________##___##_________________#___'.split(""),
+         cellsC = '___#_________________#_____#_________________#___'.split(""),
          cellsD = "____#_________#_________#_________#___________########___________#_________#_________#_________#____".split(""),
          cellsE="#___#____#____#____#____#_________#____#________#___#___#________####___######___#___#________#____##_______##_____##_______##____#________#___#___######___####________#___#___#________#____#_________#____#____#____#____#___#".split("")
 
@@ -90,16 +90,12 @@
        gridcontent = message.data.grid.replace(/#/g ,"■");
        debug.innerHTML = 'm/s: ' + Math.floor(mps) + ', avg m/s: ' + Math.floor((messages * (1000 / 33)) / (now - start)) + ", total: " + messages + ", elapsed: " + Math.floor(elapsed * (1000 / 33)) + 'ms';
 
+       output.innerHTML = gridcontent;         
+
      });
      
-     function draw() {
-       requestAnimationFrame(draw);
-       output.innerHTML = gridcontent;         
-     }
-     draw();
-     
      //worker.postMessage({"size": 6});
-     worker.postMessage({ cells: cellsC })
+     worker.postMessage({ cells: cellsA })
     </script>
   </body>
 </html>
