fix up return bug

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
      });
      
-     //worker.postMessage({"size": 6});
-     worker.postMessage({ cells: cellsA })
+     // worker.postMessage({"size": 5});
+     worker.postMessage({ cells: cellsE })
     </script>
   </body>
 </html>
