only do impressive ones, hoho

--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
        text-transform: uppercase;
      }
      #title {
-       margin: 0;
+       margin: 10px 0;
+       padding: 0;
+       font-size: 2em;
      }
     </style>
   </head>
   <body>
     <main>
-      <h1 id="title">Working</h1>
+      <div id="title">Working</div>
 
       <pre id="output"></pre>
       <p id="words"></p>
@@ -64,8 +66,8 @@
            
            '___###___###_______#_____#________#_____#___________#_______###___###___###_______#___________#_____#_______###___###_______#_____#___________#_______###___###___###_______#___________#_____#________#_____#_______###___###___'.split(""),
 
-           '___#_________________#_____#_________________#___'.split(""),
-           "____#_________#_________#_________#___________########___________#_________#_________#_________#____".split(""),
+//           '___#_________________#_____#_________________#___'.split(""),
+//           "____#_________#_________#_________#___________########___________#_________#_________#_________#____".split(""),
            "#___#____#____#____#____#_________#____#________#___#___#________####___######___#___#________#____##_______##_____##_______##____#________#___#___######___####________#___#___#________#____#_________#____#____#____#____#___#".split("")
          ];
 
